# cargo-cars-

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  config.py  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  uszips.csv
.github/workflows/: test_coverage.yml
cars_app/: main.py
cars_app/api/v1/routers/: car.py  cargo.py  constants.py
cars_app/cache/: module.py
cars_app/database/: models.py  settings.py
cars_app/database/crud/: car.py  cargo.py  location.py
cars_app/exceptions/: constants.py
cars_app/logging/: module.py
cars_app/services/: car.py  cargo.py  constants.py  helper.py
cars_app/validation/: schemas.py
migrations/: env.py
migrations/versions/: 7564a17fd996_initial_migration.py  a20e0399da24_initial_migration.py  fd10d423ca8e_initial_migration.py
tests/: conftest.py  test_cargo.py  test_cars.py
tests/fixtures/: cargos.py  cars.py  locations.py
