[tool.poetry]
name = "welbex-assignment"
version = "0.1.0"
description = ""
authors = ["Sergey Kim <<sergkim7@gmail.com>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
asyncpg = "^0.27.0"
pre-commit = "^3.2.2"
alembic = "^1.10.4"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.11"
aioredis = "^2.0.1"
httpx = "^0.24.0"
sqlalchemy-utils = "^0.41.1"
aiofiles = "^23.1.0"
aiocsv = "^1.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
